Small touchup to r14351 (bug #542658) caught by Claude Paroz.
2008-07-16  A. Walton  <awalton@gnome.org>

	* src/file-manager/fm-properties-window.c (create_basic_page):
	Small touchup to r14351 (bug #542658) caught by Claude Paroz.


svn path=/trunk/; revision=14368

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-07-16  A. Walton  <awalton@gnome.org>
+
+	* src/file-manager/fm-properties-window.c (create_basic_page):
+	Small touchup to r14351 (bug #542658) caught by Claude Paroz.
+
 2008-07-16  Christian Neumair  <cneumair@gnome.org>
 
 	* src/nautilus-pathbar.c (desktop_location_changed_callback),
