--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-17  Hendrik Richter  <hendrikr@gnome.org>
+
+	* de.po: Updated German translation.
+
 2008-06-05  Roozbeh Pournader  <roozbeh@gmail.com>
 
 	* fa.po: Fixed a bad message in Persian translation (fixes
