--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2008-07-17  Christian Neumair  <cneumair@gnome.org>
+
+	* libnautilus-private/nautilus-program-choosing.c
+	(nautilus_launch_application):
+	Pass textual URIs instead of GFiles to GAppInfo for remote files,
+	similar to nautilus_launch_desktop_file(). Fixes #543448.
+	Discovered by Kamil Páral.
+
 2008-07-16  A. Walton  <awalton@gnome.org>
 
 	* src/file-manager/fm-properties-window.c (create_basic_page):
