Use full location name as tab tooltip.
2008-07-20  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-notebook.c (nautilus_notebook_sync_tab_label):
	Use full location name as tab tooltip.

svn path=/trunk/; revision=14375

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-07-20  Christian Neumair  <cneumair@gnome.org>
+
+	* src/nautilus-notebook.c (nautilus_notebook_sync_tab_label):
+	Use full location name as tab tooltip.
+
 2008-07-19  Christian Neumair  <cneumair@gnome.org>
 
 	* src/nautilus-places-sidebar.c (add_place),
