--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-07-20  Christian Neumair  <cneumair@gnome.org>
 
+	* libnautilus-private/nautilus-file.c (update_info_internal):
+	Only update referenced MIME type if it actually changed.
+
+2008-07-20  Christian Neumair  <cneumair@gnome.org>
+
 	* libnautilus-private/nautilus-dnd.c (check_same_fs),
 	(nautilus_drag_default_drop_action_for_icons):
 	* libnautilus-private/nautilus-file-private.h:
