--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-07-20  David Zeuthen  <davidz@redhat.com>
+
+	* libnautilus-private/nautilus-file-operations.c
+	(unmount_mount_callback):
+	Call the correct finish function.
+
 2008-07-20  Christian Neumair  <cneumair@gnome.org>
 
 	* src/nautilus-pathbar.c (nautilus_path_bar_check_parent_path),
