Call the correct finish function.
2008-07-20  David Zeuthen  <davidz@redhat.com>

        * libnautilus-private/nautilus-file-operations.c
        (unmount_mount_callback):
        Call the correct finish function.


svn path=/branches/gnome-2-22/; revision=14381

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2008-07-20  David Zeuthen  <davidz@redhat.com>
+
+	* libnautilus-private/nautilus-file-operations.c
+	(unmount_mount_callback):
+	Call the correct finish function.
+
 2008-07-17  Tomas Bzatek  <tbzatek@redhat.com>
 
 	* libnautilus-private/nautilus-emblem-utils.c:
