--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-07-21  Christian Neumair  <cneumair@gnome.org>
+
+	* src/nautilus-location-bar.c (editable_activate_callback),
+	(nautilus_location_bar_init):
+	Do not emit "location-changed" if the entry is empty. Fixes #543936.
+	Thanks to Diego Escalante Urrelo.
+
 2008-07-20  David Zeuthen  <davidz@redhat.com>
 
 	* libnautilus-private/nautilus-file-operations.c
