Fix ChangeLog entry - I associated it with the wrong bug report.
svn path=/trunk/; revision=14383

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,8 @@
 
 	* src/nautilus-location-bar.c (editable_activate_callback),
 	(nautilus_location_bar_init):
-	Do not emit "location-changed" if the entry is empty. Fixes #543936.
-	Thanks to Diego Escalante Urrelo.
+	Do not emit "location-changed" if the entry is empty. Fixes #527552.
+	Thanks to Pedro Villavicencio, Cosimo Cechi and others.
 
 2008-07-20  David Zeuthen  <davidz@redhat.com>
 
