Add tooltips to the zoom controls, make menu tooltips consistent with and
2008-07-21  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-window-menus.c:
	* src/nautilus-zoom-control.c
	(nautilus_zoom_control_instance_init):
	Add tooltips to the zoom controls, make menu tooltips consistent with
	and a11y description consistent with Epiphany. Related to #543935.
	Thanks to Diego Escalante Urrelo.

svn path=/trunk/; revision=14385

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2008-07-21  Christian Neumair  <cneumair@gnome.org>
 
+	* src/nautilus-window-menus.c:
+	* src/nautilus-zoom-control.c
+	(nautilus_zoom_control_instance_init):
+	Add tooltips to the zoom controls, make menu tooltips consistent with
+	and a11y description consistent with Epiphany. Related to #543935.
+	Thanks to Diego Escalante Urrelo.
+
+2008-07-21  Christian Neumair  <cneumair@gnome.org>
+
 	* src/file-manager/fm-icon-view.c (fm_icon_view_register),
 	(fm_compact_view_register):
 	* src/file-manager/fm-icon-view.h:
