Allow to disable XMP support. Thanks to Mikel Olasagasti and Gilles
2008-07-21  Christian Neumair  <cneumair@gnome.org>

	* configure.in:
	Allow to disable XMP support. Thanks to Mikel Olasagasti and Gilles
	Dartiguelongue.

svn path=/trunk/; revision=14387

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-07-21  Christian Neumair  <cneumair@gnome.org>
 
+	* configure.in:
+	Allow to disable XMP support. Thanks to Mikel Olasagasti and Gilles
+	Dartiguelongue.
+
+2008-07-21  Christian Neumair  <cneumair@gnome.org>
+
 	* libnautilus-private/nautilus-file-private.h:
 	* libnautilus-private/nautilus-file.c (update_info_internal),
 	(nautilus_file_get_trash_original_file):
