Updated German translation, fix #543973.
2008-07-21  Hendrik Richter  <hendrikr@gnome.org>

	* de.po: Updated German translation, fix #543973.

svn path=/branches/gnome-2-22/; revision=14389

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-21  Hendrik Richter  <hendrikr@gnome.org>
+
+	* de.po: Updated German translation, fix #543973.
+
 2008-07-17  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation.
