Updated German translation, fix #543972.
2008-07-21  Hendrik Richter  <hendrikr@gnome.org>

	* de.po: Updated German translation, fix #543972.

svn path=/branches/gnome-2-22/; revision=14390

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2008-07-21  Hendrik Richter  <hendrikr@gnome.org>
 
+	* de.po: Updated German translation, fix #543972.
+
+2008-07-21  Hendrik Richter  <hendrikr@gnome.org>
+
 	* de.po: Updated German translation, fix #543973.
 
 2008-07-17  Hendrik Richter  <hendrikr@gnome.org>
