--- a/po/de.po
+++ b/po/de.po
@@ -2840,12 +2840,12 @@ msgstr "Im _Terminal ausführen"
 
 #: ../libnautilus-private/nautilus-mime-actions.c:682
 msgid "_Display"
-msgstr "_Anzeigen"
+msgstr "An_zeigen"
 
 #: ../libnautilus-private/nautilus-mime-actions.c:685
 #: ../src/nautilus-autorun-software.c:230
 msgid "_Run"
-msgstr "_Ausführen"
+msgstr "Aus_führen"
 
 #: ../libnautilus-private/nautilus-mime-actions.c:986
 #: ../src/file-manager/fm-directory-view.c:613
