Updated German translation, fix #543972.
2008-07-21  Hendrik Richter  <hendrikr@gnome.org>

	* de.po: Updated German translation, fix #543972.

svn path=/trunk/; revision=14391

--- a/po/de.po
+++ b/po/de.po
@@ -39,8 +39,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: de\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2008-07-21 17:13+0200\n"
-"PO-Revision-Date: 2008-07-21 17:13+0200\n"
+"POT-Creation-Date: 2008-07-21 17:15+0200\n"
+"PO-Revision-Date: 2008-07-21 17:15+0200\n"
 "Last-Translator: Hendrik Richter <hendrikr@gnome.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -2922,12 +2922,12 @@ msgstr "Im _Terminal ausführen"
 
 #: ../libnautilus-private/nautilus-mime-actions.c:684
 msgid "_Display"
-msgstr "_Anzeigen"
+msgstr "An_zeigen"
 
 #: ../libnautilus-private/nautilus-mime-actions.c:687
 #: ../src/nautilus-autorun-software.c:230
 msgid "_Run"
-msgstr "_Ausführen"
+msgstr "Aus_führen"
 
 #: ../libnautilus-private/nautilus-mime-actions.c:990
 #: ../src/file-manager/fm-directory-view.c:616
