--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2008-07-21  Hendrik Richter  <hendi@gnome-de.org>
+
+	* de.po: Fixed German translation by
+	Jens Seidel <jensseidel@users.sf.net>.
+
 2008-07-21  Hendrik Richter  <hendrikr@gnome.org>
 
 	* de.po: Updated German translation, fix #543972.
