--- a/po/de.po
+++ b/po/de.po
@@ -2932,7 +2932,7 @@ msgstr "Aus_führen"
 #: ../libnautilus-private/nautilus-mime-actions.c:990
 #: ../src/file-manager/fm-directory-view.c:616
 msgid "Are you sure you want to open all files?"
-msgstr "Sind sie sicher, dass Sie alle Fenster öffnen wollen?"
+msgstr "Sind Sie sicher, dass Sie alle Fenster öffnen wollen?"
 
 #: ../libnautilus-private/nautilus-mime-actions.c:992
 #, fuzzy, c-format
