Fixed German translation by Jens Seidel <jensseidel@users.sf.net>.
2008-07-21  Hendrik Richter  <hendi@gnome-de.org>

	* de.po: Fixed German translation by
	Jens Seidel <jensseidel@users.sf.net>.

svn path=/branches/gnome-2-22/; revision=14393

--- a/po/de.po
+++ b/po/de.po
@@ -2850,7 +2850,7 @@ msgstr "Aus_führen"
 #: ../libnautilus-private/nautilus-mime-actions.c:986
 #: ../src/file-manager/fm-directory-view.c:613
 msgid "Are you sure you want to open all files?"
-msgstr "Sind sie sicher, dass Sie alle Fenster öffnen wollen?"
+msgstr "Sind Sie sicher, dass Sie alle Fenster öffnen wollen?"
 
 #: ../libnautilus-private/nautilus-mime-actions.c:987
 #: ../src/nautilus-location-bar.c:151
