--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-07-21  Christian Neumair  <cneumair@gnome.org>
 
+	* NEWS:
+	Update for release.
+
+2008-07-21  Christian Neumair  <cneumair@gnome.org>
+
 	* configure.in:
 	* src/file-manager/fm-properties-window.c
 	(value_field_update_internal):
