Fix NautilusWindowInfo header inclusion.
2008-07-21  Christian Neumair  <cneumair@gnome.org>

	* src/nautilus-query-editor.h:
	Fix NautilusWindowInfo header inclusion.

svn path=/trunk/; revision=14397

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-07-21  Christian Neumair  <cneumair@gnome.org>
 
+	* src/nautilus-query-editor.h:
+	Fix NautilusWindowInfo header inclusion.
+
+2008-07-21  Christian Neumair  <cneumair@gnome.org>
+
 	* src/file-manager/fm-actions.h:
 	* src/file-manager/fm-directory-view.c
 	(action_location_open_alternate_callback),
