Post release version bump.
2008-07-21  Christian Neumair  <cneumair@gnome.org>

	* configure.in:
	Post release version bump.

=== nautilus 2.23.5 ===

svn path=/trunk/; revision=14399

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-07-21  Christian Neumair  <cneumair@gnome.org>
 
+	* configure.in:
+	Post release version bump.
+
+=== nautilus 2.23.5 ===
+
+2008-07-21  Christian Neumair  <cneumair@gnome.org>
+
 	* src/nautilus-query-editor.h:
 	Fix NautilusWindowInfo header inclusion.
 
