Make save button the default widget, and proxy entry activation to the
2008-07-22  Christian Neumair  <cneumair@gnome.org>

	* src/file-manager/fm-directory-view.c
	(action_save_search_as_callback):
	Make save button the default widget, and proxy entry activation to the
	default widget.

svn path=/trunk/; revision=14403

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2008-07-22  Christian Neumair  <cneumair@gnome.org>
 
+	* src/file-manager/fm-directory-view.c
+	(action_save_search_as_callback):
+	Make save button the default widget, and proxy entry activation to the
+	default widget.
+
+2008-07-22  Christian Neumair  <cneumair@gnome.org>
+
 	* src/nautilus-spatial-window.c (save_window_geometry_timeout),
 	(nautilus_spatial_window_unrealize),
 	(nautilus_spatial_window_save_geometry),
