Display submenu for more than two associated applications when all files
2008-07-22  Christian Neumair  <cneumair@gnome.org>

	* src/file-manager/fm-directory-view.c (reset_open_with_menu):
	Display submenu for more than two associated applications when all
	files are folders.

svn path=/trunk/; revision=14404

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2008-07-22  Christian Neumair  <cneumair@gnome.org>
 
+	* src/file-manager/fm-directory-view.c (reset_open_with_menu):
+	Display submenu for more than two associated applications when all
+	files are folders.
+
+2008-07-22  Christian Neumair  <cneumair@gnome.org>
+
 	* src/file-manager/fm-directory-view.c
 	(action_save_search_as_callback):
 	Make save button the default widget, and proxy entry activation to the
