Update for release.
2008-07-22  Christian Neumair  <cneumair@gnome.org>

	* NEWS:
	Update for release.

	* configure.in:
	Change version to 2.23.5.1.

svn path=/trunk/; revision=14405

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2008-07-22  Christian Neumair  <cneumair@gnome.org>
 
+	* NEWS:
+	Update for release.
+
+	* configure.in:
+	Change version to 2.23.5.1.
+
+2008-07-22  Christian Neumair  <cneumair@gnome.org>
+
 	* src/file-manager/fm-directory-view.c (reset_open_with_menu):
 	Display submenu for more than two associated applications when all
 	files are folders.
