--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+Major changes in 2.23.5.1 are:
+* Fix crasher in spatial mode when closing window with ctrl-w
+* Work around GTK+ tree view bug for sidebar eject button click area
+* Some popup menu fixes
+
 Major changes in 2.23.5 are:
 * Add tab support to browser mode
 * Add "restore from trash" functionality (only per item)
