Update for release.
2008-07-22  Christian Neumair  <cneumair@gnome.org>

	* NEWS:
	Update for release.

svn path=/trunk/; revision=14407

--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,7 @@ Major changes in 2.23.5.1 are:
 * Fix crasher in spatial mode when closing window with ctrl-w
 * Work around GTK+ tree view bug for sidebar eject button click area
 * Some popup menu fixes
+* Do not use C_() due to intltool bug
 
 Major changes in 2.23.5 are:
 * Add tab support to browser mode
