--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-07-22  Christian Neumair  <cneumair@gnome.org>
+
+	* NEWS:
+	Update for release.
+
 2008-07-21  Christian Neumair  <cneumair@gnome.org>
 
 	* configure.in:
