--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-07-21  Christian Neumair  <cneumair@gnome.org>
+
+	* configure.in:
+	Post release version bump.
+
+=== nautilus 2.23.5.1 ===
+
 2008-07-22  Christian Neumair  <cneumair@gnome.org>
 
 	* NEWS:
