--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2008-07-22  Priit Laes  <plaes at svn dot gnome dot org>
+
+	* et.po: Translation updated by Ivar Smolin
+
 2008-07-21  Hendrik Richter  <hendi@gnome-de.org>
 
 	* de.po: Fixed German translation by
