Enable middle-click dragging a path bar button (#532475).
2008-07-24  Cosimo Cecchi  <cosimoc@gnome.org>

	* src/nautilus-pathbar.c: (setup_button_drag_source):
	Enable middle-click dragging a path bar button (#532475).

svn path=/trunk/; revision=14413

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2008-07-24  Cosimo Cecchi  <cosimoc@gnome.org>
 
+	* src/nautilus-pathbar.c: (setup_button_drag_source):
+	Enable middle-click dragging a path bar button (#532475).
+
+2008-07-24  Cosimo Cecchi  <cosimoc@gnome.org>
+
 	* src/file-manager/fm-icon-view.c:
 	(get_stored_icon_position_callback),
 	(icon_position_changed_callback):
